--- a/.gitignore
+++ b/.gitignore
@@ -241,4 +241,18 @@ _Pvt_Extensions
 ###################
 !main/source/includes/
 
+# Cmake.gitignore for CMake build\cache in includes #
+# https://github.com/github/gitignore/blob/master/CMake.gitignore #
+###################
 
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
