--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.vcxproj.user
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -20,6 +21,8 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
+Playtest
+/main/cl_dlls/client.dll
 
 # Visual Studio 2015 cache/options directory
 .vs/
