handle opengl.io build error by adding package to linux build; update\change unlocated package references

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ matrix:
             - gcc-multilib
             - g++-multilib
             - libc6-i386
-            - libcurl4-openssl-dev:i386
-            - libpng12-dev:i386
+            - mesa-common-dev
+            - libcurl4-openssl-dev
+            - libpng-dev
 
     - os: osx
       compiler: clang
