removing osx build until I can determine configuration, try libcurl4-openssl-dev:i386 as package reference again

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,5 @@ matrix:
             - g++-multilib
             - libc6-i386
             - mesa-common-dev
-            - libcurl4-openssl-dev
+            - libcurl4-openssl-dev:i386
             - libpng-dev
-
-    - os: osx
-      compiler: clang
-      before_script:
-      - export CC=clang
-      - export CPLUS=clang++
-      script: cd main/source/linux && make
