for now, to handle linking issue: modify libpng-dev to be libpng12-dev:i386 again, though it is a dated package

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ matrix:
             - libc6-i386
             - mesa-common-dev
             - libcurl4-openssl-dev:i386
-            - libpng-dev
+            - libpng12-dev:i386
