specify and add linux distributions

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,34 @@ matrix:
             - g++-multilib
             - libc6-i386
             - mesa-common-dev
+            - libcurl4-openssl-dev
+            - libpng12-dev
+                
+    - os: linux
+      dist: xenial
+      compiler: gcc
+      script: cd main/source/linux && make
+      env: OPJ_CI_ARCH=i386
+      addons:
+        apt:
+          packages:
+            - gcc-multilib
+            - g++-multilib
+            - libc6-i386
+            - mesa-common-dev
+            - libcurl4-openssl-dev:i386
+            - libpng12-dev:i386
+            
+    - os: linux
+      dist: trusty
+      compiler: gcc
+      script: cd main/source/linux && make
+      env: OPJ_CI_ARCH=i386
+      addons:
+        apt:
+          packages:
+            - gcc-multilib
+            - g++-multilib
+            - libc6-i386
             - libcurl4-openssl-dev:i386
             - libpng12-dev:i386
