there is not libpng12-dev package for bionic, chaning to libpng-dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
             - libc6-i386
             - mesa-common-dev
             - libcurl4-openssl-dev
-            - libpng12-dev
+            - libpng-dev
                 
     - os: linux
       dist: xenial
