add g++ compiler option to specify c++11 standard

--- a/main/source/particles/Makefile
+++ b/main/source/particles/Makefile
@@ -5,7 +5,7 @@
 #
 ######################################################################
 
-C++ = g++ -m32
+C++ = g++ -std=c++11 -m32
 
 GLUT_HOME  =/usr/local/contrib/unmoderated
 
