attempt to update MacOS sdk, set minimum os to be 10.7, and include export in travis ci to define deployment target

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ matrix:
       before_script:
         - export CC=clang
         - export CPLUS=clang++
+        - export MACOSX_DEPLOYMENT_TARGET=10.10
       script: cd main/source/linux && make
             
   allow_failures:
